# Intro-to-AI-course-project

./: .gitignore  CMakeLists.txt  G16_1.csv  G16_2.csv  README.md  Report.org
assets/: Agent hex colors.txt
cmake/: FindSDL2_image.cmake
docs/: Report.org  Report.tex  SETUP.org
src/: AI.cpp  AI.hpp  GUI.cpp  Helpers.cpp  Helpers.hpp  Point.hpp  ProcessData.cpp  Simulation.cpp  Simulation.hpp  WorkerThread.cpp  WorkerThread.hpp  main.cpp
tests/: tests.cpp
